page metadata (titles) added to each page

--- a/src/layout/overlay.scss
+++ b/src/layout/overlay.scss
@@ -1,5 +1,5 @@
 .overlay {
-  // display: flex;
+  // display -> flex or none managed by 'inline-style'
   position: fixed;
   z-index: 50;
   height: 100%;
